--- a/templates/echec.html
+++ b/templates/echec.html
@@ -48,7 +48,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </br>
 
 			<div class="agileits_copyright">
-        <p class="copy-w3layouts">© 2020 Développé par Abderahmane HAMDOUCHI & Houssam ZOUHRI
+        <p class="copy-w3layouts">© 2020 Développé par Abderahmane HAMDOUCHI 
                 </p>
 			</div>
 		</div>
